<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg">
    <TextView android:text="@string/blank" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtClear" android:gravity="center_vertical|center_horizontal" android:textSize="20dip" android:layout_marginTop="5dip"></TextView>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:background="@drawable/digitwindow" android:layout_marginLeft="12dip" android:layout_marginRight="12dip">
        <TextView android:text="0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtView0" android:textSize="30dip"></TextView>
        <TextView android:text="@string/separator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/txtSep" android:textSize="30dip"></TextView>
    </LinearLayout>
	<LinearLayout android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginBottom="4dip" android:layout_marginTop="6dip">
		<Button android:id="@+id/btnRestart" android:background="@drawable/btndark" android:text="@string/restart" android:layout_marginLeft="40dip" android:layout_width="wrap_content" android:layout_height="48dip"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal">
		<Button android:id="@+id/button1" android:text="@string/b1" android:layout_width="80dip" android:layout_height="48dip"></Button>
		<Button android:id="@+id/button2" android:text="@string/b2" android:layout_width="80dip" android:layout_height="48dip"></Button>
		<Button android:id="@+id/button3" android:text="@string/b3" android:layout_width="80dip" android:layout_height="48dip"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/LinearLayout4" android:gravity="center_vertical|center_horizontal">
		<Button android:id="@+id/Button4" android:text="@string/b4" android:layout_width="80dip" android:layout_height="48dip"></Button>
		<Button android:id="@+id/Button5" android:text="@string/b5" android:layout_width="80dip" android:layout_height="48dip"></Button>
		<Button android:id="@+id/Button6" android:text="@string/b6" android:layout_width="80dip" android:layout_height="48dip"></Button>
	</LinearLayout>
	<LinearLayout android:gravity="center_vertical|center_horizontal" android:layout_width="match_parent" android:id="@+id/LinearLayout01" android:layout_height="wrap_content">
		<Button android:id="@+id/Button7" android:text="@string/b7" android:layout_width="80dip" android:layout_height="48dip"></Button>
		<Button android:text="@string/b8" android:layout_width="80dip" android:id="@+id/Button8" android:layout_height="48dip"></Button>
		<Button android:text="@string/b9" android:layout_width="80dip" android:id="@+id/Button9" android:layout_height="48dip"></Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_marginTop="4dip">
		<Button
			android:id="@+id/btnSet"
			android:text="@string/btnset"
			android:layout_width="120dip" android:layout_marginLeft="40dip" android:background="@drawable/btndark" android:textSize="20dip" android:layout_height="60dip"></Button>
		<Button
			android:id="@+id/btnHit"
			android:text="@string/btnhit"
			android:layout_width="120dip" android:background="@drawable/btndark" android:textSize="20dip" android:layout_height="60dip"></Button>
	</LinearLayout>
</LinearLayout>
